clusters/home/apps/immich/00namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: immich
  labels:
    app: immich
